# OpenCPN

./: .clang-format  .cmake-format.yaml  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  Authors.adoc  CMakeLists.txt  COPYING.lgplv2  Curl.cmake  ExternTinyXML.cmake  FindRSVG.cmake  Findgps.cmake  INSTALL  LICENSING  LINUX_DEVICES.md  MESSAGES.adoc  NSIS.InstallOptions.ini.in  NSIS.template.in  NSIS.template.in.in  README  README.opencpn-cmd.md  RELEASE_NOTES.md  RebuildToolbar  SECURITY.md  Utils.cmake  VERSION.cmake  app.manifest  appveyor.yml  build_mac_64.sh  check-pr  color-2.8.12.htm  color.htm  config.h.in  cppcheck_report.txt  deploy_rsa.enc  doxy-errors.txt  fix-includes  (+93 more)
cli/: CMakeLists.txt  api_shim.cpp  console.cpp
glutil/: CMakeLists.txt  console.cpp
libs/IXWebSocket/: .clang-format  .dockerignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE.txt  README.md  SECURITY.md  docker-compose.yml  httpd.cpp  main.cpp  makefile.dev  mkdocs.yml
libs/N2KParser/: CMakeLists.txt
libs/SQLiteCpp/: CMakeLists.txt  LICENSE.txt
libs/ShapefileCpp/: CMakeLists.txt  LICENSE  README.md  conanfile.txt
libs/easywsclient/: .gitignore  CMakeLists.txt  Makefile  README.md  easywsclient.cpp  example-client-cpp11.cpp  example-client.cpp  example-server.js  package.json
libs/garmin/: CMakeLists.txt  FindLibUSB.cmake  README.md  defs.h  gbser.cc  gbser.h  gbser_posix.cc  gbser_posix.h  gbser_private.h  gbser_win.cc  gbser_win.h
libs/gdal/: CMakeLists.txt
libs/geoprim/: CMakeLists.txt
libs/gl_headers/: CMakeLists.txt
libs/glu/: CMakeLists.txt
libs/gtest/: CMakeLists.txt
libs/gui/: CMakeLists.txt
libs/iso8211/: CMakeLists.txt
libs/libdnet/: CMakeLists.txt  Makefile.in  config.h.in-Fix-wrong-return-type.patch  configure  configure.ac
libs/libtess2/: CMakeLists.txt
libs/lz4/: CMakeLists.txt
libs/mDNS/: CMakeLists.txt
libs/mdns/: CMakeLists.txt  mdns.c.patch
libs/mipmap/: CMakeLists.txt
libs/mongoose/: CMakeLists.txt
libs/nmea0183/: CMakeLists.txt
libs/o_sound/: CMakeLists.txt
libs/observable/: CMakeLists.txt  README.adoc  README.md
model/: CMakeLists.txt
model/cmake/: Curl.cmake  FindGLIB.cmake  FindLIBUDEV.cmake  FindLIBUSB.cmake  FindSystemd.cmake
model/src/: ais_bitstring.cpp  ais_decoder.cpp  ais_state_vars.cpp  ais_target_data.cpp  android_ser_thread.cpp  android_serial_io.cpp  autopilot_output.cpp  base_platform.cpp  catalog_handler.cpp  catalog_parser.cpp  certificates.cpp  chartdata_input_stream.cpp  cli_platform.cpp  cmdline.cpp  comm_ais.cpp  comm_appmsg.cpp  comm_appmsg_bus.cpp  comm_bridge.cpp  comm_buffers.cpp  comm_can_util.cpp  comm_decoder.cpp  comm_driver.cpp  comm_drv_factory.cpp  comm_drv_file.cpp  comm_drv_internal.cpp  comm_drv_loopback.cpp  comm_drv_n0183.cpp  comm_drv_n0183_android_bt.cpp  comm_drv_n0183_android_int.cpp  comm_drv_n0183_net.cpp  comm_drv_n0183_serial.cpp  comm_drv_n2k.cpp  comm_drv_n2k_net.cpp  comm_drv_n2k_serial.cpp  comm_drv_n2k_socketcan.cpp  comm_drv_registry.cpp  comm_drv_signalk.cpp  comm_drv_signalk_net.cpp  comm_n0183_output.cpp  comm_navmsg.cpp  (+86 more)
plugins/: CMakeLists.txt  PluginLocalization.cmake  README.demo_pi_sample  README.md
plugins/aa1chartnavhelper_pi/: CMakeLists.txt  README
plugins/aisradar_pi/: CMakeLists.txt  README.md
plugins/chartdldr_pi/: CMakeLists.txt
plugins/dashboard_pi/: CMakeLists.txt
plugins/demo_pi/: CMakeLists.txt  VERSION.cmake
plugins/demo_pi_sample/: .gitignore  CMakeLists.txt
plugins/grib_pi/: CMakeLists.txt  GRIB.fbp  XyGribPanel.fbp
plugins/logbook_pi/: CMakeLists.txt
plugins/metadata/: bsb4-plugin-darwin-10.13.3.xml  bsb4-plugin-darwin-10.13.6.xml  bsb4-plugin-fedora-29.xml  bsb4-plugin-flatpak-18.08.xml  bsb4-plugin-mingw-10.xml  bsb4-plugin-msvc-10.0.14393.xml  bsb4-plugin-ubuntu-16.04.xml  metadata-builder  oesenc-plugin-darwin-10.13.3.xml  oesenc-plugin-darwin-10.13.6.xml  oesenc-plugin-fedora-29.xml  oesenc-plugin-flatpak-18.08.xml  oesenc-plugin-mingw-10.xml  oesenc-plugin-msvc-10.0.14393.xml  oesenc-plugin-ubuntu-16.04.xml  radar-plugin-darwin-10.13.3.xml  radar-plugin-darwin-10.13.6.xml  radar-plugin-fedora-29.xml  radar-plugin-flatpak-18.08.xml  radar-plugin-mingw-10.xml  radar-plugin-msvc-10.0.14393.xml  radar-plugin-ubuntu-16.04.xml  squiddio-plugin-darwin-10.13.3.xml  squiddio-plugin-darwin-10.13.6.xml  squiddio-plugin-fedora-29.xml  squiddio-plugin-flatpak-18.08.xml  squiddio-plugin-mingw-10.xml  squiddio-plugin-msvc-10.0.14393.xml  squiddio-plugin-ubuntu-16.04.xml
plugins/radar_pi/: CMakeLists.txt
plugins/squiddio_pi/: CMakeLists.txt  README
plugins/vdr_pi/: CMakeLists.txt
plugins/wmm_pi/: CMakeLists.txt  README.md  (+1 more)
s57/: CMakeLists.txt
test/: CMakeLists.txt  README.md  buffer_tests.cpp  chartdldr_archive_classify_tests.cpp  chartdldr_bulk_async_step_tests.cpp  chartdldr_bulk_catalog_refresh_tests.cpp  chartdldr_bulk_catalog_result_tests.cpp  chartdldr_bulk_catalog_run_tests.cpp  chartdldr_bulk_chart_loop_tests.cpp  chartdldr_bulk_report_tests.cpp  chartdldr_bulk_request_tests.cpp  chartdldr_bulk_run_tests.cpp  chartdldr_bulk_schedule_tests.cpp  chartdldr_bulk_state_tests.cpp  chartdldr_bulk_teardown_tests.cpp  chartdldr_bulk_transfer_tests.cpp  chartdldr_bulk_yield_integration_tests.cpp  chartdldr_catalog_prep_tests.cpp  chartdldr_catalog_selection_tests.cpp  chartdldr_chart_classify_tests.cpp  chartdldr_chart_utils_tests.cpp  chartdldr_check_plugin_symbols_test.sh  chartdldr_extract_txn_tests.cpp  chartdldr_panel_bulk_state_tests.cpp  chartdldr_prefs_time_tests.cpp  chartdldr_schedule_config_tests.cpp  chartdldr_schedule_integration_tests.cpp  chartdldr_schedule_state_tests.cpp  chartdldr_schedule_tests.cpp  chartdldr_scheduled_catalog_advance_tests.cpp  chartdldr_scheduled_catalog_controls_tests.cpp  chartdldr_scheduled_run_log_tests.cpp  chartdldr_scheduled_stall_tests.cpp  chartdldr_scheduled_ui_lock_tests.cpp  chartdldr_source_catalog_tests.cpp  chartdldr_temp_download_tests.cpp  chartdldr_test_wx_init.cpp  check_locales.cmake  check_locales.cpp  cli_server.cpp  (+24 more)
(+9719 files in other folders)
